# fastrequest

./: .gitignore  Cargo.toml  build.rs  fastrequest.toml  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
.git-crypt/keys/default/0/: 7786034BD52149F51B0A2A14B1122F04E962DDC5.gpg
secrets/: cert.pem  credentials.toml  key.pem
src/: .gitignore  App.svelte  Login.svelte  app.css  config.rs  consts.rs  dbms.rs  main.rs  stores.ts  utils.rs
src/migrator/: m20240629_000001_create_table_user.rs  m20240708_000001_create_table_cookie.rs
src/subs/: CreateAccountForm.svelte  LoginForm.svelte
utils/migrator-entity-generator/: Cargo.toml
utils/migrator-entity-generator/src/: main.rs  migrator
