[package]
name = "fastrequest"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-mysql", "sqlx-sqlite", "sqlx-postgres"] }
sea-orm-migration = "0.12.15"
serde = "1.0.203"
serde_derive = "1.0.203"
terminal-link = "0.1.0"
toml = "0.8.14"

# TODO: once rocket 0.6 releases, change this to stable/crates
# move back into regular dependency list
[dependencies.rocket]
git = "https://github.com/rwf2/Rocket"
rev = "fb4b63040595077f83039cf00c73275c8283ab2d"
features = ["http3-preview", "json", "tls"]

# Manual patch override because sea-orm-rocket only supports 0.5, not 0.6-dev...
# When Rocket 0.6 drops, also TODO need to change this to crates 0.6
[dependencies.sea-orm-rocket]
git = "https://github.com/amyipdev/sea-orm"
branch = "rocket-0.6.0-dev"

[dependencies.rocket_async_compression]
git = "https://github.com/amyipdev/rocket_async_compression"
branch = "rocket-0.6-dev"

[build-dependencies]
glob = "0.3.1"
chrono = "0.4.38"
